server finally running

--- a/server/web/index.html
+++ b/server/web/index.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>WhatsAppServer is running!!!</div>
+        <h1>Server information message</h1>
+        <h3>WhatsApp Server is currently running!</h3>
     </body>
 </html>
